--- a/HTML - Review/aula1.html
+++ b/HTML - Review/aula1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!--Não obrigatória, mas identifica codificação de caracteres (bytes -> texto) para decodificação-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Ajusta conteúdo a largura da tela-->
     <style>
         input {
             width: 500px;
